--- a/index.html
+++ b/index.html
@@ -85,8 +85,19 @@
 
          <div id="movieModal" class="modal">
             <div class="modal-content">
-                <span class="closeMovieModal">&times;</span>
-                <p>Some text in the Modal..</p>
+                <span class="close">&times;</span>
+                <div id="movietitle"></div>
+                <div id="moviegenres"></div>
+                <div id="moviedate"></div>
+                <div id="movierated"></div>
+                <div id="movieimdbscore"></div>
+                <div id="moviedirector"></div>
+                <div id="movieactors"></div>
+                <div id="movieduration"></div>
+                <div id="moviecountries"></div>
+                <div id="movieboxoffice"></div> 
+                <div id="moviedescription"></div>
+
             </div>
         </div>
         <script>initModal()</script>
