--- a/index.html
+++ b/index.html
@@ -14,14 +14,10 @@
                 "http://localhost:8000/api/v1/titles/?page_size=1&year=&min_year=&max_year=&imdb_score=&imdb_score_min=&imdb_score_max=&title=&title_contains=&genre=&genre_contains=&sort_by=-imdb_score&director=&director_contains=&writer=&writer_contains=&actor=&actor_contains=&country=&country_contains=&lang=&lang_contains=&company=&company_contains=&rating=&rating_contains=",
                 "bestmovie"
                 );
-        </script>
-        <script>
             createBestRatedSection(
                 "http://localhost:8000/api/v1/titles/?page_size=8&year=&min_year=&max_year=&imdb_score=&imdb_score_min=&imdb_score_max=&title=&title_contains=&genre=&genre_contains=&sort_by=-imdb_score&director=&director_contains=&writer=&writer_contains=&actor=&actor_contains=&country=&country_contains=&lang=&lang_contains=&company=&company_contains=&rating=&rating_contains=",
                 "bestrated"
                 );
-        </script>
-        <script>
             createMoviesSection(
                 "http://localhost:8000/api/v1/titles/?page_size=7&year=&min_year=&max_year=&imdb_score=&imdb_score_min=&imdb_score_max=&title=&title_contains=&genre=Sci-Fi&genre_contains=&sort_by=-imdb_score&director=&director_contains=&writer=&writer_contains=&actor=&actor_contains=&country=&country_contains=&lang=&lang_contains=&company=&company_contains=&rating=&rating_contains=",
                 "scifi"
@@ -35,15 +31,13 @@
                 "animation"
                 );
         </script>
-       
-        <header></header>
 
-        <h1>JustStreamit</h1>
         <nav>
-            <li><a>Home</a></li>
-            <li><a>Categories</a></li>
-            <li><a>Profile</a></li>
-            <li><a>Contact</a></li>
+            <a><h1>JustStreamit</h1></a>
+            <a>Home</a>
+            <a>Categories</a>
+            <a>Profile</a>
+            <a>Contact</a>
         </nav>
 
         
