creating categories by sequence (added two html div)

--- a/index.html
+++ b/index.html
@@ -33,12 +33,15 @@
         </script>
 
         <nav>
-            <a><h1>JustStreamit</h1></a>
+            <h1>JustStreamit</h1>
             <a>Home</a>
             <a>Categories</a>
             <a>Profile</a>
             <a>Contact</a>
         </nav>
+
+        <div id="bestmoviewrapper"></div>
+        <div id="bestratedwrapper"></div>
 
         
         <script>createModal()</script>
