--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
-        <meta charset="utf-8"/>
+        <meta charset="utf-8">
 
         <title>Projet 4</title>
         <link rel="stylesheet" href="styles/style.css">
@@ -48,4 +48,4 @@
         <script>createModal()</script>
         <script>initModal()</script>
     </body>
-<html>
+</html>
